fixed nav layout on mobile to protrude futher

--- a/src/App.sass
+++ b/src/App.sass
@@ -22,7 +22,7 @@ $desktop: 1024px
   transform: translateX(0px)
 
 .scroll-back-menu
-  transform: translateX(-252px)
+  transform: translateX(-242px)
 
 .fade
   opacity: 0
